--- a/index.html
+++ b/index.html
@@ -48,17 +48,17 @@
     <main>
       <!-- hero section -->
       <section class="hero-section">
-        <div class="container hero-container">
+        <div class="container">
           <h1 class="title">Effective Solutions for Your Business</h1>
           <button class="button" type="button">Order Service</button>
         </div>
       </section>
       <!-- about section -->
-      <section>
+      <section class="about-section">
         <div class="container">
           <h2 class="visually-hidden">About us</h2>
           <ul class="about-us-list">
-            <li>
+            <li class="about-list-item">
               <h3 class="about-section-title">Strategy</h3>
               <p class="about-section-text">
                 Our goal is to identify the business problem to walk away with
@@ -101,8 +101,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-list-title">Mark Guerrero</h3>
-              <p class="team-list-text">Product Designer</p>
+              <div class="team-section-container">
+                <h3 class="team-list-title">Mark Guerrero</h3>
+                <p class="team-list-text">Product Designer</p>
+              </div>
             </li>
             <li class="team-list-item">
               <img
@@ -111,8 +113,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-list-title">Tom Ford</h3>
-              <p class="team-list-text">Frontend Developer</p>
+              <div class="team-section-container">
+                <h3 class="team-list-title">Tom Ford</h3>
+                <p class="team-list-text">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-list-item">
               <img
@@ -121,8 +125,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-list-title">Camila Garcia</h3>
-              <p class="team-list-text">Marketing</p>
+              <div class="team-section-container">
+                <h3 class="team-list-title">Camila Garcia</h3>
+                <p class="team-list-text">Marketing</p>
+              </div>
             </li>
             <li class="team-list-item">
               <img
@@ -131,14 +137,16 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-list-title">Daniel Wilson</h3>
-              <p class="team-list-text">UI Designer</p>
+              <div class="team-section-container">
+                <h3 class="team-list-title">Daniel Wilson</h3>
+                <p class="team-list-text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
       </section>
       <!-- Portfolio-section -->
-      <section>
+      <section class="portfolio-section">
         <div class="container">
           <h2 class="team-section-title">Our Portfolio</h2>
           <ul class="portfolio-list">
@@ -147,8 +155,9 @@
                 src="./images/portfolio-section/banking-app.jpg"
                 alt="Banking App"
                 width="360"
-                height="300px"
+                height="300"
               />
+              <div class="portfolio-container"></div>
               <h3 class="portfolio-list-title">Banking App</h3>
               <p class="portfolio-list-text">App</p>
             </li>
@@ -159,6 +168,7 @@
                 width="360"
                 height="300px"
               />
+              <div class="portfolio-container"></div>
               <h3 class="portfolio-list-title">Cashless Payment</h3>
               <p class="portfolio-list-text">Marketing</p>
             </li>
@@ -169,6 +179,7 @@
                 width="360"
                 height="300px"
               />
+              <div class="portfolio-container"></div>
               <h3 class="portfolio-list-title">Meditation App</h3>
               <p class="portfolio-list-text">App</p>
             </li>
@@ -179,6 +190,7 @@
                 width="360"
                 height="300px"
               />
+              <div class="portfolio-container"></div>
               <h3 class="portfolio-list-title">Taxi Service</h3>
               <p class="portfolio-list-text">Marketing</p>
             </li>
@@ -189,6 +201,7 @@
                 width="360"
                 height="300px"
               />
+              <div class="portfolio-container"></div>
               <h3 class="portfolio-list-title">Screen Illustrations</h3>
               <p class="portfolio-list-text">Design</p>
             </li>
@@ -199,6 +212,7 @@
                 width="360"
                 height="300px"
               />
+              <div class="portfolio-container"></div>
               <h3 class="portfolio-list-title">Online Courses</h3>
               <p class="portfolio-list-text">Marketing</p>
             </li>
