--- a/index.html
+++ b/index.html
@@ -65,21 +65,21 @@
                 the perfect and creative solution.
               </p>
             </li>
-            <li>
+            <li class="about-list-item">
               <h3 class="about-section-title">Punctuality</h3>
               <p class="about-section-text">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li>
+            <li class="about-list-item">
               <h3 class="about-section-title">Diligence</h3>
               <p class="about-section-text">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li>
+            <li class="about-list-item">
               <h3 class="about-section-title">Technologies</h3>
               <p class="about-section-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -157,64 +157,70 @@
                 width="360"
                 height="300"
               />
-              <div class="portfolio-container"></div>
-              <h3 class="portfolio-list-title">Banking App</h3>
-              <p class="portfolio-list-text">App</p>
+              <div class="portfolio-container">
+                <h3 class="portfolio-list-title">Banking App</h3>
+                <p class="portfolio-list-text">App</p>
+              </div>
             </li>
             <li class="portfolio-list-item">
               <img
                 src="./images/portfolio-section/cashless-payment.jpg"
                 alt="Cashless Payment"
                 width="360"
-                height="300px"
+                height="300"
               />
-              <div class="portfolio-container"></div>
-              <h3 class="portfolio-list-title">Cashless Payment</h3>
-              <p class="portfolio-list-text">Marketing</p>
+              <div class="portfolio-container">
+                <h3 class="portfolio-list-title">Cashless Payment</h3>
+                <p class="portfolio-list-text">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-list-item">
               <img
                 src="./images/portfolio-section/meditation-app.jpg"
                 alt="Meditation App"
                 width="360"
-                height="300px"
+                height="300"
               />
-              <div class="portfolio-container"></div>
-              <h3 class="portfolio-list-title">Meditation App</h3>
-              <p class="portfolio-list-text">App</p>
+              <div class="portfolio-container">
+                <h3 class="portfolio-list-title">Meditation App</h3>
+                <p class="portfolio-list-text">App</p>
+              </div>
             </li>
             <li class="portfolio-list-item">
               <img
                 src="./images/portfolio-section/the-service.jpg"
                 alt="Taxi Service"
                 width="360"
-                height="300px"
+                height="300"
               />
-              <div class="portfolio-container"></div>
-              <h3 class="portfolio-list-title">Taxi Service</h3>
-              <p class="portfolio-list-text">Marketing</p>
+              <div class="portfolio-container">
+                <h3 class="portfolio-list-title">Taxi Service</h3>
+                <p class="portfolio-list-text">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-list-item">
               <img
                 src="./images/portfolio-section/screen-illustration.jpg"
                 alt="Screen Illustrations"
                 width="360"
-                height="300px"
+                height="300"
               />
-              <div class="portfolio-container"></div>
-              <h3 class="portfolio-list-title">Screen Illustrations</h3>
-              <p class="portfolio-list-text">Design</p>
+              <div class="portfolio-container">
+                <h3 class="portfolio-list-title">Screen Illustrations</h3>
+                <p class="portfolio-list-text">Design</p>
+              </div>
             </li>
             <li class="portfolio-list-item">
               <img
                 src="./images/portfolio-section/online-courses.jpg"
                 alt="Online Courses"
                 width="360"
-                height="300px"
+                height="300"
               />
-              <div class="portfolio-container"></div>
-              <h3 class="portfolio-list-title">Online Courses</h3>
-              <p class="portfolio-list-text">Marketing</p>
+              <div class="portfolio-container">
+                <h3 class="portfolio-list-title">Online Courses</h3>
+                <p class="portfolio-list-text">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
